@@ -350,16 +350,6 @@ operator|new
 name|Diff
 argument_list|()
 decl_stmt|;
-name|int
-name|stems
-init|=
-literal|0
-decl_stmt|;
-name|int
-name|words
-init|=
-literal|0
-decl_stmt|;
 name|allocTrie
 argument_list|()
 expr_stmt|;
@@ -469,9 +459,6 @@ argument_list|,
 literal|"-a"
 argument_list|)
 expr_stmt|;
-name|words
-operator|++
-expr_stmt|;
 block|}
 while|while
 condition|(
@@ -516,9 +503,6 @@ argument_list|,
 name|stem
 argument_list|)
 argument_list|)
-expr_stmt|;
-name|words
-operator|++
 expr_stmt|;
 block|}
 block|}
